Incorporación de carruseles para las obras

--- a/index.html
+++ b/index.html
@@ -26,19 +26,26 @@
 </header>
 
 <!-- Presentación -->
-<h2 class="title">
-    ¿Quienes somos?
-</h2>
-<section id="nosotros">
-    <p class="who-text">
-        Nos especializamos en hacer realidad la imagen corporativa de su 
-        emprendimiento. Brindamos todo nuestro conocimiento en diseño, 
-        construcción y arquitectura, garantizando un alto grado de 
-        profesionalismo a nuestros clientes. En nuestro sitio podrá 
-        encontrar referencias de algunos de los trabajos realizados.
-    </p>
-    <video src="videos/mc.mp4" width="50%" controls></video>
-</section>
+<div class="presentation">
+    <div class="row">
+        <h2 class="col title">
+            ¿Quienes somos?
+        </h2>
+    </div>
+    <section id="nosotros" class="row">
+        <p class="col-5 who-text">
+            Nos especializamos en hacer realidad la imagen corporativa de su 
+            emprendimiento. Brindamos todo nuestro conocimiento en diseño, 
+            construcción y arquitectura, garantizando un alto grado de 
+            profesionalismo a nuestros clientes. En nuestro sitio podrá 
+            encontrar referencias de algunos de los trabajos realizados.
+        </p>
+        <figure class="col figure">
+            <video src="videos/mc.mp4" class="figure-img img-fluid rounded" alt="Video institucional" width="100%" controls></video>
+            <figcaption class="figure-caption text-end">Inauguración McDonald's Ruta 26, Del Viso, Buenos Aires.</figcaption>
+        </figure>
+    </section>
+</div>
 
 <!-- Logos de clientes -->
 <h2>
