--- a/obras.html
+++ b/obras.html
@@ -37,41 +37,41 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/mcdonalds1.JPG" class="d-block w-100" alt="...">
+            <img src="images/mcdonalds1.JPG" class="d-block w-100" alt="McDonald's Puerto Madero">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <h5>Nuevo mostrador</h5>
+              <p>Actualización de sistemas y nueva imagen.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/mcdonalds2.JPG" class="d-block w-100" alt="...">
+            <img src="images/mcdonalds2.JPG" class="d-block w-100" alt="McDonald's Puerto Madero">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <h5>Nuevo mobiliario</h5>
+              <p>Cambio de mesas y sillas en sintonía con la nueva imagen.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/mcdonalds3.JPG" class="d-block w-100" alt="...">
+            <img src="images/mcdonalds3.JPG" class="d-block w-100" alt="McDonald's Puerto Madero">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5>Nuevo McCafé</h5>
+              <p>Incorporación de cafetería y pastelería.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/mcdonalds4.JPG" class="d-block w-100" alt="...">
+            <img src="images/mcdonalds4.JPG" class="d-block w-100" alt="McDonald's Puerto Madero">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5>Nuevo seating exterior</h5>
+              <p>Con maceteros vidriados para delimitar el espacio.</p>
             </div>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carousel-mcdonalds" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
+          <span class="visually-hidden">Anterior</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carousel-mcdonalds" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
+          <span class="visually-hidden">Siguiente</span>
         </button>
       </div>
 </section>
@@ -87,41 +87,41 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/honda1.JPG" class="d-block w-100" alt="...">
+            <img src="images/honda1.JPG" class="d-block w-100" alt="Honda La Rural">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <h5>Presentación del Honda HR-V</h5>
+              <p>Montado sobre una plataforma giratoria.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/honda2.JPG" class="d-block w-100" alt="...">
+            <img src="images/honda2.JPG" class="d-block w-100" alt="Honda La Rural">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <h5>Honda Racing Formula 1</h5>
+              <p>Stand fijo protegido por una baranda de acero inoxidable.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/honda3.JPG" class="d-block w-100" alt="...">
+            <img src="images/honda3.JPG" class="d-block w-100" alt="Honda La Rural">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5>Honda Powersports</h5>
+              <p>Presentación de las nuevas motocicleas para pista y todoterreno.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/honda4.JPG" class="d-block w-100" alt="...">
+            <img src="images/honda4.JPG" class="d-block w-100" alt="Honda La Rural">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5>Lounge Bar</h5>
+              <p>Espacio creado exclusivamente para clientes de la marca.</p>
             </div>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carousel-honda" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
+          <span class="visually-hidden">Anterior</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carousel-honda" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
+          <span class="visually-hidden">Siguiente</span>
         </button>
       </div>
 </section>
@@ -139,45 +139,45 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/sbg1.JPG" class="d-block w-100" alt="...">
+            <img src="images/sbg1.JPG" class="d-block w-100" alt="SBG Palermo">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <h5>Showroom principal</h5>
+              <p>Hormigón a la vista que resalta el ambiente.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/sbg2.jpg" class="d-block w-100" alt="...">
+            <img src="images/sbg2.jpg" class="d-block w-100" alt="SBG Palermo">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <h5>Ambientaciones</h5>
+              <p>Cada espacio recrea un diseño único.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/sbg3.jpg" class="d-block w-100" alt="...">
+            <img src="images/sbg3.jpg" class="d-block w-100" alt="SBG Palermo">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5>Medios de elevación</h5>
+              <p>Todos los pisos están comunicados por escaleras con barandas iluminadas.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/sbg4.jpg" class="d-block w-100" alt="...">
+            <img src="images/sbg4.jpg" class="d-block w-100" alt="SBG Palermo">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5>Bar y comedor</h5>
+              <p>Los clientes cuentan con un espacio para tomar café o compartir un snack.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/sbg5.jpg" class="d-block w-100" alt="...">
+            <img src="images/sbg5.jpg" class="d-block w-100" alt="SBG Palermo">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5>Iluminación</h5>
+              <p>La grilla led que recorre todo el local brinda iluminación sin sombras.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/sbg6.jpg" class="d-block w-100" alt="...">
+            <img src="images/sbg6.jpg" class="d-block w-100" alt="SBG Palermo">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5>Garage</h5>
+              <p>Cocheras exclusivas para los clientes con un toque de diseño.</p>
             </div>
           </div>
         </div>
