--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Link al css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="old-style.css">
     <title>Orion Obras</title>
 </head>
 <body>
@@ -20,8 +20,8 @@
         <div class="menu-item"><a href="#nosotros">Nosotros</a></div>
         <div class="menu-item"><a href="#clientes">Clientes</a></div>
         <div class="menu-logo"><a href="index.html"><img src="images/logosmall.jpg" alt="Logo" width="260" height="120"></a></div>
-        <div class="menu-item"><a href="obras.html">Obras</a></div>
-        <div class="menu-item"><a href="contacto.html">Contacto</a></div>
+        <div class="menu-item"><a href="./pages/obras.html">Obras</a></div>
+        <div class="menu-item"><a href="./pages/contacto.html">Contacto</a></div>
     </nav>
 </header>
 
