--- a/pages/obras.html
+++ b/pages/obras.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Link al css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../old-style.css">
     <title>Obras</title>
 </head>
 <body>
@@ -17,9 +17,9 @@
 <!-- Links a las secciones -->
 <header class="menu-container">
     <nav class="menu">
-        <div class="menu-item"><a href="index.html#nosotros">Nosotros</a></div>
-        <div class="menu-item"><a href="index.html#clientes">Clientes</a></div>
-        <div class="menu-logo"><a href="index.html"><img src="images/logosmall.jpg" alt="Logo" width="260" height="120"></a></div>
+        <div class="menu-item"><a href="../index.html#nosotros">Nosotros</a></div>
+        <div class="menu-item"><a href="../index.html#clientes">Clientes</a></div>
+        <div class="menu-logo"><a href="../index.html"><img src="images/logosmall.jpg" alt="Logo" width="260" height="120"></a></div>
         <div class="menu-item"><a href="obras.html">Obras</a></div>
         <div class="menu-item"><a href="contacto.html">Contacto</a></div>
     </nav>
@@ -37,28 +37,28 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/mcdonalds1.JPG" class="d-block w-100" alt="McDonald's Puerto Madero">
+            <img src="../images/mcdonalds1.JPG" class="d-block w-100" alt="McDonald's Puerto Madero">
             <div class="carousel-caption d-none d-md-block">
               <h5>Nuevo mostrador</h5>
               <p>Actualización de sistemas y nueva imagen.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/mcdonalds2.JPG" class="d-block w-100" alt="McDonald's Puerto Madero">
+            <img src="../images/mcdonalds2.JPG" class="d-block w-100" alt="McDonald's Puerto Madero">
             <div class="carousel-caption d-none d-md-block">
               <h5>Nuevo mobiliario</h5>
               <p>Cambio de mesas y sillas en sintonía con la nueva imagen.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/mcdonalds3.JPG" class="d-block w-100" alt="McDonald's Puerto Madero">
+            <img src="../images/mcdonalds3.JPG" class="d-block w-100" alt="McDonald's Puerto Madero">
             <div class="carousel-caption d-none d-md-block">
               <h5>Nuevo McCafé</h5>
               <p>Incorporación de cafetería y pastelería.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/mcdonalds4.JPG" class="d-block w-100" alt="McDonald's Puerto Madero">
+            <img src="../images/mcdonalds4.JPG" class="d-block w-100" alt="McDonald's Puerto Madero">
             <div class="carousel-caption d-none d-md-block">
               <h5>Nuevo seating exterior</h5>
               <p>Con maceteros vidriados para delimitar el espacio.</p>
@@ -87,28 +87,28 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/honda1.JPG" class="d-block w-100" alt="Honda La Rural">
+            <img src="../images/honda1.JPG" class="d-block w-100" alt="Honda La Rural">
             <div class="carousel-caption d-none d-md-block">
               <h5>Presentación del Honda HR-V</h5>
               <p>Montado sobre una plataforma giratoria.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/honda2.JPG" class="d-block w-100" alt="Honda La Rural">
+            <img src="../images/honda2.JPG" class="d-block w-100" alt="Honda La Rural">
             <div class="carousel-caption d-none d-md-block">
               <h5>Honda Racing Formula 1</h5>
               <p>Stand fijo protegido por una baranda de acero inoxidable.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/honda3.JPG" class="d-block w-100" alt="Honda La Rural">
+            <img src="../images/honda3.JPG" class="d-block w-100" alt="Honda La Rural">
             <div class="carousel-caption d-none d-md-block">
               <h5>Honda Powersports</h5>
               <p>Presentación de las nuevas motocicleas para pista y todoterreno.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/honda4.JPG" class="d-block w-100" alt="Honda La Rural">
+            <img src="../images/honda4.JPG" class="d-block w-100" alt="Honda La Rural">
             <div class="carousel-caption d-none d-md-block">
               <h5>Lounge Bar</h5>
               <p>Espacio creado exclusivamente para clientes de la marca.</p>
@@ -139,42 +139,42 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/sbg1.JPG" class="d-block w-100" alt="SBG Palermo">
+            <img src="../images/sbg1.JPG" class="d-block w-100" alt="SBG Palermo">
             <div class="carousel-caption d-none d-md-block">
               <h5>Showroom principal</h5>
               <p>Hormigón a la vista que resalta el ambiente.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/sbg2.jpg" class="d-block w-100" alt="SBG Palermo">
+            <img src="../images/sbg2.jpg" class="d-block w-100" alt="SBG Palermo">
             <div class="carousel-caption d-none d-md-block">
               <h5>Ambientaciones</h5>
               <p>Cada espacio recrea un diseño único.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/sbg3.jpg" class="d-block w-100" alt="SBG Palermo">
+            <img src="../images/sbg3.jpg" class="d-block w-100" alt="SBG Palermo">
             <div class="carousel-caption d-none d-md-block">
               <h5>Medios de elevación</h5>
               <p>Todos los pisos están comunicados por escaleras con barandas iluminadas.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/sbg4.jpg" class="d-block w-100" alt="SBG Palermo">
+            <img src="../images/sbg4.jpg" class="d-block w-100" alt="SBG Palermo">
             <div class="carousel-caption d-none d-md-block">
               <h5>Bar y comedor</h5>
               <p>Los clientes cuentan con un espacio para tomar café o compartir un snack.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/sbg5.jpg" class="d-block w-100" alt="SBG Palermo">
+            <img src="../images/sbg5.jpg" class="d-block w-100" alt="SBG Palermo">
             <div class="carousel-caption d-none d-md-block">
               <h5>Iluminación</h5>
               <p>La grilla led que recorre todo el local brinda iluminación sin sombras.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/sbg6.jpg" class="d-block w-100" alt="SBG Palermo">
+            <img src="../images/sbg6.jpg" class="d-block w-100" alt="SBG Palermo">
             <div class="carousel-caption d-none d-md-block">
               <h5>Garage</h5>
               <p>Cocheras exclusivas para los clientes con un toque de diseño.</p>
