--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,7 +19,7 @@
     <nav class="menu">
         <div class="menu-item"><a href="../index.html#nosotros">Nosotros</a></div>
         <div class="menu-item"><a href="../index.html#clientes">Clientes</a></div>
-        <div class="menu-logo"><a href="../index.html"><img src="images/logosmall.jpg" alt="Logo" width="260" height="120"></a></div>
+        <div class="menu-logo"><a href="../index.html"><img src="../images/logosmall.jpg" alt="Logo" width="260" height="120"></a></div>
         <div class="menu-item"><a href="obras.html">Obras</a></div>
         <div class="menu-item"><a href="contacto.html">Contacto</a></div>
     </nav>
