--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -29,7 +29,18 @@
 <h2 class="title">
     Contactanos
 </h2>
-<section class="form-container">
+<div class="row justify-content-center my-5">
+    <div class="col-lg-4">
+        <form action="mailto:info@orionobras.com">
+            <div class="form-floating my-5">
+                <input type="nombre" id="nombre" class="form-control" placeholder="Nombre">
+                <label for="nombre" class="form-label">Apellido y nombre:</label>
+            </div>
+
+        </form>
+    </div>
+</div>
+<!-- <section class="form-container">
     <form action="mailto:info@orionobras.com" method="POST" enctype="multipart/form-data" name="EmailForm">
         <div class="row">
             <label for="formGroupExampleInput" class="form-label">Nombre</label>
@@ -50,7 +61,7 @@
         </div>
         <button type="button submit" value="submit" class="btn btn-success">Enviar</button>
     </form>
-</section>
+</section> -->
 
 <!-- Redes sociales -->
 <h2 class="title">
