Incorporación de Google Maps

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -29,11 +29,11 @@
 <h2 class="title">
     Contactanos
 </h2>
-<div class="row justify-content-center my-5">
+<div class="row justify-content-center py-3" style="background-color: lightgray;">
     <div class="col-lg-4">
         <form action="https://formsubmit.co/leandrouade@gmail.com" method="POST">
             <div class="form-floating my-3">
-                <input type="nombre" id="nombre" class="form-control" placeholder="Nombre">
+                <input type="name" id="name" class="form-control" placeholder="Nombre">
                 <label for="nombre" class="form-label">Nombre:</label>
             </div>
             <div class="form-floating my-3">
@@ -44,6 +44,7 @@
                 <textarea name="consulta" id="consulta" class="form-control" placeholder="" style="height:100px"></textarea>
                 <label for="nombre" class="form-label">¿En qué te podemos ayudar?</label>
             </div>
+            <input type="hidden" name="_subject" value="Contacto web: orionobras.com.ar">
             <input type="hidden" name="_next" value="https://orionobras.com.ar/gracias.html">
             <div class="text-center">
                 <button type="submit" class="btn btn-secondary">Enviar</button>
@@ -51,28 +52,12 @@
         </form>
     </div>
 </div>
-<!-- <section class="form-container">
-    <form action="mailto:info@orionobras.com" method="POST" enctype="multipart/form-data" name="EmailForm">
-        <div class="row">
-            <label for="formGroupExampleInput" class="form-label">Nombre</label>
-            <div class="col">
-              <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre">
-            </div>
-            <div class="col">
-              <input type="text" class="form-control" placeholder="Apellido" aria-label="Apellido">
-            </div>
-          </div>
-        <div class="mb-3 form-item">
-            <label for="exampleFormControlInput1" class="form-label">Email</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="email@ejemplo.com" name="Contact-Email">
-        </div>
-        <div class="mb-3 form-item">
-            <label for="exampleFormControlTextarea1" class="form-label">Consulta</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
-        </div>
-        <button type="button submit" value="submit" class="btn btn-success">Enviar</button>
-    </form>
-</section> -->
+
+<!-- Google Maps -->
+<iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.355378942854!2d-58.51122914882467!3d-34.64572696713404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc852cdd95df1%3A0x1640ef267971f028!2sOrion%20Obras%20S.R.L.!5e0!3m2!1ses!2sar!4v1645662640620!5m2!1ses!2sar"
+    width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy">
+</iframe>
 
 <!-- Redes sociales -->
 <h2 class="title">
