--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Link al css -->
-    <link rel="stylesheet" href="old-style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Orion Obras</title>
 </head>
 <body>
@@ -51,17 +51,41 @@
 <h2>
     Clientes
 </h2>
-<section id="clientes" class="grid-container">
-    <div class="grid-item"><img src="images/mcdonalds.jpg" alt="McDonald's"></div>
-    <div class="grid-item"><img src="images/cafemar.jpg" alt="Café Martinez" class="photo-grid-item"></div>
-    <div class="grid-item"><img src="images/bonafide.jpg" alt="Bonafide" class="photo-grid-item"></div>
-    <div class="grid-item"><img src="images/ypf.jpg" alt="YPF" class="photo-grid-item"></div>
-    <div class="grid-item"><img src="images/honda.jpg" alt="Honda" class="photo-grid-item"></div>
-    <div class="grid-item"><img src="images/sbg.jpg" alt="SGB" class="photo-grid-item"></div>
-    <div class="grid-item"><img src="images/adolfo.jpg" alt="Adolfo Dominguez" class="photo-grid-item"></div>
-    <div class="grid-item"><img src="images/jazmin.jpg" alt="Jazmin Chebar" class="photo-grid-item"></div>
-    <div class="grid-item"><img src="images/lazaro.jpg" alt="Lazaro" class="photo-grid-item"></div>
-</section>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <img class="img-fluid" src="images/mcdonalds.jpg" alt="McDonald's">
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <img class="img-fluid" src="images/cafemar.jpg" alt="Café Martinez">
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <img class="img-fluid" src="images/bonafide.jpg" alt="Bonafide">
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <img class="img-fluid" src="images/ypf.jpg" alt="YPF">
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <img class="img-fluid" src="images/honda.jpg" alt="Honda">
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <img class="img-fluid" src="images/sbg.jpg" alt="SGB">
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <img class="img-fluid" src="images/adolfo.jpg" alt="Adolfo Dominguez">
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <img class="img-fluid" src="images/jazmin.jpg" alt="Jazmin Chebar">
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <img class="img-fluid" src="images/lazaro.jpg" alt="Lazaro">
+        </div>
+    </div>
+</div>
 
 <!-- Redes sociales -->
 <h2 class="title">
