--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Link al css -->
-    <link rel="stylesheet" href="../old-style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Contacto</title>
 </head>
 <body>
@@ -30,7 +30,7 @@
     Contactanos
 </h2>
 <div class="row justify-content-center py-3" style="background-color: lightgray;">
-    <div class="col-lg-4">
+    <div class="col-md-4 pb-3">
         <form action="https://formsubmit.co/leandrouade@gmail.com" method="POST">
             <div class="form-floating my-3">
                 <input type="name" id="name" class="form-control" placeholder="Nombre">
@@ -54,7 +54,7 @@
 </div>
 
 <!-- Google Maps -->
-<iframe
+<iframe class="mt-5 mb-5"
     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.355378942854!2d-58.51122914882467!3d-34.64572696713404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc852cdd95df1%3A0x1640ef267971f028!2sOrion%20Obras%20S.R.L.!5e0!3m2!1ses!2sar!4v1645662640620!5m2!1ses!2sar"
     width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy">
 </iframe>
