Nuevos logos para clientes

--- a/index.html
+++ b/index.html
@@ -54,35 +54,35 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-lg-3 col-md-4 col-sm-6">
-            <img src="images/mcdonalds.jpg" alt="McDonald's">
+            <img src="images/mcdonalds.png" alt="McDonald's">
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6">
-            <img src="images/cafemar.jpg" alt="Café Martinez">
+            <img src="images/cafemar.png" alt="Café Martinez">
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6">
-            <img src="images/bonafide.jpg" alt="Bonafide">
-        </div>
-    </div>
-    <div class="row justify-content-center">
-        <div class="col-lg-3 col-md-4 col-sm-6">
-            <img src="images/ypf.jpg" alt="YPF">
-        </div>
-        <div class="col-lg-3 col-md-4 col-sm-6">
-            <img src="images/honda.jpg" alt="Honda">
-        </div>
-        <div class="col-lg-3 col-md-4 col-sm-6">
-            <img src="images/sbg.jpg" alt="SGB">
+            <img src="images/bonafide.png" alt="Bonafide">
         </div>
     </div>
     <div class="row justify-content-center">
         <div class="col-lg-3 col-md-4 col-sm-6">
-            <img src="images/adolfo.jpg" alt="Adolfo Dominguez">
+            <img src="images/ypf.png" alt="YPF">
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6">
-            <img src="images/jazmin.jpg" alt="Jazmin Chebar">
+            <img src="images/honda.png" alt="Honda">
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6">
-            <img src="images/lazaro.jpg" alt="Lazaro">
+            <img src="images/sbg.png" alt="SGB">
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <img src="images/adolfo.png" alt="Adolfo Dominguez">
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <img src="images/jazmin.png" alt="Jazmin Chebar">
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <img src="images/lazaro.png" alt="Lazaro">
         </div>
     </div>
 </div>
