Restyling del index

--- a/index.html
+++ b/index.html
@@ -66,11 +66,15 @@
 </h2>
 <section id="nosotros" class="container">
         <p class="row who-text">
-            Nos especializamos en hacer realidad la imagen corporativa de su
-            emprendimiento. Brindamos todo nuestro conocimiento en diseño,
-            construcción y arquitectura, garantizando un alto grado de
-            profesionalismo a nuestros clientes. En nuestro sitio podrá
-            encontrar referencias de algunos de los trabajos realizados.
+            Nos especializamos en hacer realidad la imagen corporativa de su 
+            emprendimiento. Brindamos todo nuestro conocimiento en diseño, 
+            construcción y arquitectura, garantizando un alto grado de 
+            profesionalismo a nuestros clientes.
+            <br><br>
+            Creemos que solamente una solución integral que logre comunicar 
+            la singularidad de la marca en un sistema arquitectónico que 
+            identifica el carácter del proyecto y refuerza su personalidad 
+            garantiza un resultado a largo plazo y el éxito del mismo.
         </p>
 
         <figure class="row figure">
