--- a/index.html
+++ b/index.html
@@ -15,7 +15,35 @@
 <body>
 
 <!-- Navbar -->
-<div class="container">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container pb-1">
+        <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="Logo" height="30px"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#nosotros">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#clientes">Clientes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./pages/obras.html">Obras</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<!-- <div class="container">
     <div class="row p-2">
         <div class="col-2 pt-2">
             <a href="index.html"><img src="images/logo.png" alt="Logo" height="30px"></a>
@@ -40,7 +68,7 @@
             </ul>
         </div>
     </div>
-</div>
+</div> -->
 
 <!-- Carrousel principal -->
 <div id="carousel-index" class="carousel slide" data-bs-ride="carousel">
@@ -88,7 +116,7 @@
 <h2>
     Clientes
 </h2>
-<div class="container">
+<div id="clientes" class="container">
     <div class="row justify-content-center">
         <div class="col-lg-3 col-md-4 col-sm-6">
             <img src="images/mcdonalds.png" alt="McDonald's">
