--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -56,7 +56,7 @@
 <!-- Google Maps -->
 <iframe class="mt-5 mb-5"
     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.355378942854!2d-58.51122914882467!3d-34.64572696713404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc852cdd95df1%3A0x1640ef267971f028!2sOrion%20Obras%20S.R.L.!5e0!3m2!1ses!2sar!4v1645662640620!5m2!1ses!2sar"
-    width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy">
+    width="100%" height="370px" style="border:0;" allowfullscreen="" loading="lazy">
 </iframe>
 
 <!-- Redes sociales -->
