--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,14 +14,36 @@
 </head>
 <body>
     
-<!-- Links a las secciones -->
-<header class="menu-container">
-    <nav class="menu">
-        <div class="menu-item"><a href="../index.html#nosotros">Nosotros</a></div>
-        <div class="menu-item"><a href="../index.html#clientes">Clientes</a></div>
-        <div class="menu-logo"><a href="../index.html"><img src="../images/logosmall.jpg" alt="Logo" width="260" height="120"></a></div>
-        <div class="menu-item"><a href="obras.html">Obras</a></div>
-        <div class="menu-item"><a href="contacto.html">Contacto</a></div>
+<!-- Navbar -->
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container pb-1">
+            <a class="navbar-brand" href="../index.html"><img src="images/logo.png" alt="Logo" height="30px"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html#nosotros">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html#clientes">Clientes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="obras.html">Obras</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
 </header>
 
